Completes user story two

--- a/app/views/genres/index.html.haml
+++ b/app/views/genres/index.html.haml
@@ -2,3 +2,11 @@
 
 -@genres.each do |genre|
   %span= genre.name
+
+-if current_admin?
+  %h2 Create a New Genre
+  =form_for [@new_genre] do |f|
+    =f.label :name
+    =f.text_field :name
+
+    =f.submit
