Completes fourth user story

--- a/app/views/genres/index.html.haml
+++ b/app/views/genres/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Genres
 
 -@genres.each do |genre|
-  %span= genre.name
+  =link_to genre.name, genre_path(genre)
 
 -if current_admin?
   %h2 Create a New Genre
