--- a/app/views/genres/show.html.haml
+++ b/app/views/genres/show.html.haml
@@ -1,6 +1,7 @@
 %h1= @genre.name
 %h3= "Average Rating: #{@genre.average_movie_rating}"
 %h3= "Highest Rated Movie: #{@genre.highest_rated_movie}"
+%h3= "Lowest Rated Movie: #{@genre.lowest_rated_movie}"
 
 -@genre_movies.each do |movie|
   %span= movie.title
