Updates genres create action to be namespaced and require admin before creation

--- a/app/views/genres/index.html.haml
+++ b/app/views/genres/index.html.haml
@@ -5,7 +5,7 @@
 
 -if current_admin?
   %h2 Create a New Genre
-  =form_for [@new_genre] do |f|
+  =form_for [:admin, @new_genre] do |f|
     =f.label :name
     =f.text_field :name
 
